--- a/Client/src/app/login/login.component.html
+++ b/Client/src/app/login/login.component.html
@@ -1,28 +1,50 @@
-
-<div class="bg-img vh-100 d-flex justify-content-center align-items-center" >
-  <div class="card" style="width: 30rem;">
+<div class="bg-img vh-100 d-flex justify-content-center align-items-center">
+  <div class="card" style="width: 30rem">
     <div class="card-body p-5">
-      <form #loginForm="ngForm" class="form-signin text-center" (ngSubmit)="login()">
-        <h1 class="mb-5 font-weight-bold">BugTracker</h1>
+      <form
+        #loginForm="ngForm"
+        class="form-signin text-center"
+        (ngSubmit)="login()"
+      >
+        <h1 class="font-weight-bold mb-5">BugTracker</h1>
         <div class="form-group">
           <label class="sr-only">Email address</label>
-          <input name="email"
-                 [(ngModel)]="model.email"
-                 class="form-control form-control-md" placeholder="Email address">
+          <input
+            name="email"
+            [(ngModel)]="model.email"
+            class="form-control form-control-md"
+            placeholder="Email address"
+          />
+          <p class="text-danger" *ngIf="emailError != ''">{{ emailError }}</p>
         </div>
         <div class="form-group">
           <label class="sr-only">Password</label>
-          <input name="password"
-                 [(ngModel)]="model.password"
-                 class="form-control form-control-md" placeholder="Password"  type="password">
+          <input
+            name="password"
+            [(ngModel)]="model.password"
+            class="form-control form-control-md"
+            placeholder="Password"
+            type="password"
+          />
+          <p class="text-danger" *ngIf="passwordError != ''">
+            {{ passwordError }}
+          </p>
         </div>
 
         <div class="custom-control custom-checkbox mb-3">
-          <input type="checkbox" class="custom-control-input" id="customCheck1">
-          <label class="custom-control-label" for="customCheck1">Remember Me</label>
+          <input
+            type="checkbox"
+            class="custom-control-input"
+            id="customCheck1"
+          />
+          <label class="custom-control-label" for="customCheck1"
+            >Remember Me</label
+          >
         </div>
 
-        <button class="sign-in-btn btn btn-md mb-5" type="submit">Sign In</button>
+        <button class="sign-in-btn btn btn-md mb-5" type="submit">
+          Sign In
+        </button>
         <div>
           <p class="mb-0 text-muted">
             Don't have an account? <a routerLink="/register">Register</a>
@@ -38,10 +60,7 @@
             View this app as a <a href="#">Demo User</a>
           </p>
         </div>
-
       </form>
     </div>
   </div>
 </div>
-
-
