--- a/Client/src/app/register/register.component.html
+++ b/Client/src/app/register/register.component.html
@@ -1,62 +1,85 @@
+<!-- registration form -->
+<ng-container *ngIf="!this.registered">
+  <div class="bg-img vh-100 d-flex justify-content-center align-items-center">
+    <div class="card" style="width: 30rem">
+      <div class="card-body p-5">
+        <form
+          #registerForm="ngForm"
+          class="form-signin text-center"
+          (ngSubmit)="register()"
+        >
+          <h1 class="mb-5 font-weight-bold">BugTracker</h1>
+          <div class="form-group">
+            <label class="sr-only">First Name</label>
+            <input
+              name="firstName"
+              [(ngModel)]="model.firstName"
+              class="form-control form-control-md"
+              placeholder="First Name"
+            />
+          <p class="text-danger" *ngIf="firstNameError != ''">{{ firstNameError }}</p>
 
+          </div>
+          <div class="form-group">
+            <label class="sr-only">Last Name</label>
+            <input
+              name="lastName"
+              [(ngModel)]="model.lastName"
+              class="form-control form-control-md"
+              placeholder="Last Name"
+            />
+            <p class="text-danger" *ngIf="lastNameError != ''">{{ lastNameError }}</p>
 
-<div class="bg-img vh-100 d-flex justify-content-center align-items-center" *ngIf="!this.registered">
-  <div class="card" style="width: 30rem;">
-    <div class="card-body p-5">
-      <form #registerForm="ngForm" class="form-signin text-center" (ngSubmit)="register()">
-        <h1 class="mb-5 font-weight-bold">BugTracker</h1>
-        <div class="form-group">
-          <label class="sr-only">First Name</label>
-          <input name="firstName"
-                 [(ngModel)]="model.firstName"
-                 class="form-control form-control-md" placeholder="First Name" required="" autofocus="">
-        </div>
-        <div class="form-group">
-          <label class="sr-only">Last Name</label>
-          <input name="lastName"
-                 [(ngModel)]="model.lastName"
-                 class="form-control form-control-md" placeholder="Last Name" required="" autofocus="">
-        </div>
-        <div class="form-group">
-          <label class="sr-only">Email address</label>
-          <input name="email"
-                 [(ngModel)]="model.email"
-                 class="form-control form-control-md" placeholder="Email address" required="" autofocus="">
-        </div>
-        <div class="form-group">
-          <label class="sr-only">Password</label>
-          <input name="password"
-                 [(ngModel)]="model.password"
-                 class="form-control form-control-md mb-5" placeholder="Password" type="password">
-        </div>
+          </div>
+          <div class="form-group">
+            <label class="sr-only">Email address</label>
+            <input
+              name="email"
+              [(ngModel)]="model.email"
+              class="form-control form-control-md"
+              placeholder="Email address"
+            />
+          <p class="text-danger" *ngIf="emailError != ''">{{ emailError }}</p>
 
-        <button class="sign-in-btn btn btn-md mb-5" type="submit">Register</button>
-        <div>
-          <p class="mb-0 text-muted">
-            Already have an account? <a routerLink="/login">Sign In</a>
-          </p>
-        </div>
+          </div>
+          <div class="form-group">
+            <label class="sr-only">Password</label>
+            <input
+              name="password"
+              [(ngModel)]="model.password"
+              class="form-control form-control-md mb-5"
+              placeholder="Password"
+              type="password"
+            />
+            <p class="text-danger" *ngIf="passwordError != ''">
+              {{ passwordError }}
+            </p>
+          </div>
 
-
-      </form>
+          <button class="sign-in-btn btn btn-md mb-5" type="submit">
+            Register
+          </button>
+          <div>
+            <p class="mb-0 text-muted">
+              Already have an account? <a routerLink="/login">Sign In</a>
+            </p>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
-</div>
-
-
+</ng-container>
 
 <!--message after successful registration-->
-<div class="bg-img vh-100 d-flex justify-content-center align-items-center" *ngIf="this.registered">
-  <div class="card" style="width: 30rem;">
-    <div class="card-body p-5">
-      <h4>An account has been created for <strong>{{email}}</strong> ! You can now <a routerLink="/login">login</a> with your email and password. </h4>
+<ng-container *ngIf="this.registered">
+  <div class="bg-img vh-100 d-flex justify-content-center align-items-center">
+    <div class="card" style="width: 30rem">
+      <div class="card-body p-5">
+        <h4>
+          An account has been created for <strong>{{ email }}</strong> ! You can
+          now <a routerLink="/login">login</a> with your email and password.
+        </h4>
+      </div>
     </div>
   </div>
-</div>
-
-
-
-
-
-
-
+</ng-container>
