--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -37,8 +37,8 @@
         </button>
         <div class="dropdown-menu" *dropdownMenu>
 
-          <a class="dropdown-item" href="#">Edit Profile</a>
-          <a class="dropdown-item" href="#">Members</a>
+          <a class="dropdown-item" routerLink="/user/edit">Edit Profile</a>
+          <a class="dropdown-item" routerLink="/users">Users</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" routerLink="/login" (click)="logout()">Sign Out</a>
         </div>
@@ -62,7 +62,7 @@
           <input name="searchQuery"
                  [(ngModel)]="model.searchQuery"
                  class="form-control form-control-md mr-sm-0 search-bar" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn my-2 mr-sm-5 icon-link" type="submit">Search</button>
+          <button class="btn my-2 mr-sm-5 icon-link" type="submit"><i class="fa fa-search"></i></button>
         </form>
         <!--log out button-->
         <a class="sign-out-btn btn my-2 my-sm-0 btn-sm nav-link" routerLink="/login" (click)="logout()">Sign Out</a>
