Updated database seed method, configured many-to-many relationship in DataContext

--- a/Client/src/app/user-edit/user-edit.component.css
+++ b/Client/src/app/user-edit/user-edit.component.css
@@ -32,3 +32,14 @@ label{
     color: darkslategray;
     font-weight: bold;
 }
+
+.password-btn {
+    border-radius: 5px;
+    border-color: grey;
+    border-width: thin;
+    background-color: transparent;
+}
+
+.password-btn:hover {
+    color: teal;
+}
