--- a/Client/src/app/user-edit/user-edit.component.html
+++ b/Client/src/app/user-edit/user-edit.component.html
@@ -6,10 +6,7 @@
     <div class="card">
     <div class="card-body p-5 bg-light">
         <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Photo</label>
-                
-            </div>
+           
             <div class="form-group row">
                 <label class="col-sm-2 col-form-label">Role</label>
                 <div class="col-sm-10">
@@ -31,15 +28,15 @@
             <div class="form-group row">
                 <label class="col-sm-2 col-form-label">Last Name</label>
                 <div class="col-sm-10">
-                <input name="lastName" [(ngModel)]="member.lastName"class="form-control">
+                <input name="lastName" [(ngModel)]="member.lastName"class="form-control mb-2">
                 </div>
             </div>
-            <!-- <div class="form-group row">
+            <div class="form-group row">
                 <label class="col-sm-2 col-form-label">Password</label>
                 <div class="col-sm-10">
-                    <a href="#">Reset Password</a>
+                    <button class="password-btn">Reset Password</button>
                 </div>
-            </div> -->
+            </div>
         </form>
         <!--Save button-->
         <button [disabled]="!editForm.dirty" form="editForm" class="save-btn btn nav-link btn-block" type="submit">Save Changes</button>
